# random-059

./: .gitignore  README.md  pyproject.toml
config/: thresholds.yaml
src/privesc_detector/: config.py  dispatcher.py  main.py
src/privesc_detector/api/: dependencies.py
src/privesc_detector/api/routes/: alerts.py  enrichment.py  health.py  ingest.py
src/privesc_detector/detections/: auth_burst.py  auth_chain.py  base.py  keytab_smuggling.py  privilege_escalation.py
src/privesc_detector/enrichment/: base.py  cache.py  critical_accounts.py  vault.py
src/privesc_detector/graph/: builder.py
src/privesc_detector/ingest/: crowdstrike.py  unix_auth.py
src/privesc_detector/model/: alert.py  event.py
src/privesc_detector/models/: alert.py  edge.py  events.py  node.py
src/privesc_detector/store/: alerts.py  client.py  edges.py  nodes.py  sessions.py
src/privesc_detector/viz/: app.py  convert.py
tests/: conftest.py
tests/test_api/: test_alerts.py
tests/test_detections/: test_auth_burst.py  test_auth_chain.py  test_keytab_smuggling.py  test_privilege_escalation.py
tests/test_enrichment/: test_critical_accounts.py  test_vault.py
tests/test_ingest/: test_crowdstrike.py  test_unix_auth.py
