[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privesc-detector"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "motor==3.4.0",
    "pymongo==4.7.2",
    "pydantic==2.12.5",
    "networkx==3.3",
    "pyyaml==6.0.1",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "dash>=2.17",
    "dash-cytoscape>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-mock==3.14.0",
    "mongomock-motor==0.0.21",
    "ruff==0.4.4",
    "mypy==1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/privesc_detector"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
